<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/ch_surface"
    android:orientation="vertical"
    android:padding="@dimen/spacing_xl">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/pause_reason_title"
        android:textColor="@color/ch_on_surface"
        android:textSize="@dimen/ch_text_size_title"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xs"
        android:gravity="center"
        android:text="@string/pause_reason_subtitle"
        android:textColor="@color/ch_on_surface_variant"
        android:textSize="@dimen/ch_text_size_body" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/pauseReasonList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md"
        android:overScrollMode="never" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pauseNoteLayout"
        style="@style/Widget.ApiCargoHub.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_sm"
        android:hint="@string/pause_note_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pauseNoteInput"
            style="@style/Widget.ApiCargoHub.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:maxLines="3" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
